Esc while naming marker doesn't work #55348

Closed
opened 2018-06-06 14:34:34 +02:00 by Hjalti Hjálmarsson · 8 comments

System Information
Xbuntu / AMD

Blender Version
03b8e4f

Short description of error
If you're renaming a marker you can't press Esc to get out of it.

Exact steps for others to reproduce the error
New file
Hover over the dopesheet and press M (to create a marker)
Press Ctrl+M (to rename it)
Press Esc, it should take you out of the renaming but it doesn't

**System Information** Xbuntu / AMD **Blender Version** 03b8e4f **Short description of error** If you're renaming a marker you can't press Esc to get out of it. **Exact steps for others to reproduce the error** New file Hover over the dopesheet and press M (to create a marker) Press Ctrl+M (to rename it) Press Esc, it should take you out of the renaming but it doesn't
Author
Member

Added subscriber: @Hjalti

Added subscriber: @Hjalti

Added subscriber: @dfelinto

Added subscriber: @dfelinto

That's very strange. As a workaround you can mouse hover the ok button and press Esc twice.

That's very strange. As a workaround you can mouse hover the ok button and press Esc twice.

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2018-06-06 18:33:29 +02:00

@ideasman42 this is probably on your desk ;)

@ideasman42 this is probably on your desk ;)

Caused by a14005c070
Investigating.

Caused by a14005c070 Investigating.

This issue was referenced by 2d2f23de10

This issue was referenced by 2d2f23de10103528cb64beef58ec0cdb277409ff

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55348
No description provided.