Fix T55348: Renaming a marker can't cancel

Regression in a14005c070a1f